Fixed DTO + Validation